--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ gapic-generator = "^1.11.4"
 pandoc = "^2.3"
 black = "^23.7.0"
 ruff = "^0.0.287"
+pyright = "^1.1.326"
+setuptools = "^68.2.0"
+autoimport = "^1.3.3"
 
 
 [build-system]
