--- a/examples/simple-types/proto/buf.gen.yaml
+++ b/examples/simple-types/proto/buf.gen.yaml
@@ -1,12 +1,11 @@
+# ./proto/buf.gen.yaml
+
 version: v1
 managed:
   enabled: true
   go_package_prefix:
     default: github.com/fraser-isbester/gapic-python-basic/examples/simple-types
 plugins:
-  - plugin: buf.build/protocolbuffers/go
-    out: ../gen/go
-    opt: paths=source_relative
   - plugin: python_gapic
     out: ../gen/python
     opt:
